testing/ShouldFail/repeatedFunction.gp
file:"a"
%%
func(){
    return 3.0;
}
func(float a){
    return 2.0;
}